# mpc-matching

./: .gitignore  Cargo.toml  LICENSE  README.md  openssl.cnf  precompute-spdz.py  prepare-test-env.py  run-all-parties.py  run-local.py  run-party.py
dealer/: Cargo.toml
dealer/src/: main.rs
matcher/: Cargo.toml
matcher/src/: main.rs
mpc/: Cargo.toml
mpc/src/: circuits.rs  executor.rs  fields.rs  lib.rs  plaintext.rs  transport.rs
mpc/src/circuits/: basic.rs  bitwise.rs  boolean.rs  elementary.rs  flow.rs  integer.rs  matching.rs  mod.rs  sequences.rs  sorting.rs
mpc/src/circuits/graphs/: flow.rs  matching.rs  mod.rs
mpc/src/spdz/: engine.rs  fake_dealer.rs  mod.rs  precomp_dealer.rs  share.rs
mpc/src/transport/: config.rs  mod.rs  multiparty.rs  networking.rs
mpc_flow/: Cargo.toml
mpc_flow/src/: flow.rs  lib.rs  matching.rs
mpc_test_app/: Cargo.toml
mpc_test_app/src/: circuits.rs  main.rs
