[package]
name = "mpc"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
bincode = "1.3.3"
digest = "0.10.1"
ff = { version = "0.11", features = ["derive"] }
futures = "0.3.19"
itertools = "0.10.3"
ndarray = "0.15.4"
rand = { version = "0.8.4", features = ["small_rng"] }
rustls-pemfile = "0.3.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha3 = "0.10.0"
static_init = "1.0.2"
tokio = { version = "1.15.0", features = ["full"] }
tokio-rustls = "0.23.2"
tokio-serde = { version = "0.8.0", features = ["bincode"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
